--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="card">
       <h2>Español (Colombia)</h2>
       <p>Leer capítulos en Español (Col).</p>
-      <a class="btn" href="./es-co/">Entrar</a>
+      <a class="btn" href="./es/">Entrar</a>
     </div>
   </section>
 
