--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>30,000 DAYS</title>
   <style>
-    :root { color-scheme: light dark; }
-    body { max-width: 980px; margin: 0 auto; padding: 28px 18px; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.6; }
-    header { text-align: center; margin: 10px 0 24px; }
-    h1 { margin: 8px 0 6px; letter-spacing: 0.5px; }
-    .sub { opacity: 0.85; margin: 0; }
-    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 14px; margin-top: 22px; }
-    .card { border: 1px solid rgba(127,127,127,.35); border-radius: 14px; padding: 18px; text-align: center; }
-    .card h2 { margin: 4px 0 6px; font-size: 1.2rem; }
-    .card p { margin: 0 0 12px; opacity: 0.85; }
-    .btn { display: inline-block; padding: 10px 14px; border-radius: 999px; border: 1px solid rgba(127,127,127,.45); text-decoration: none; }
-    .btn:hover { border-color: currentColor; }
-    footer { margin-top: 28px; opacity: 0.8; font-size: 0.95rem; text-align: center; }
-    @media (max-width: 720px) { .grid { grid-template-columns: 1fr; } }
+    body{font-family:system-ui,Arial;display:grid;place-items:center;min-height:100vh;margin:0}
+    .box{max-width:720px;padding:32px;text-align:center}
+    a{display:inline-block;margin:10px;padding:14px 18px;border:1px solid #ccc;border-radius:10px;text-decoration:none;color:#111}
+    a:hover{background:#f3f3f3}
   </style>
 </head>
 <body>
-  <header>
+  <div class="box">
     <h1>30,000 DAYS</h1>
-    <p class="sub">Two languages · One work · Equal before DIOS</p>
-  </header>
+    <p>Select a language:</p>
 
-  <section class="grid" aria-label="Language selection">
-    <div class="card">
-      <h2>English</h2>
-      <p>Read chapters in English.</p>
-      <a class="btn" href="./en/">Enter</a>
-    </div>
-
-    <div class="card">
-      <h2>Español (Colombia)</h2>
-      <p>Leer capítulos en Español (Col).</p>
-      <a class="btn" href="./es/">Entrar</a>
-    </div>
-  </section>
-
-  <footer>
-    © 30,000 DAYS · Public edition
-  </footer>
+    <a href="./en/">English</a>
+    <a href="./es/">Español</a>
+  </div>
 </body>
 </html>
