Refactor HTML structure and update meta tags
Updated the title and description meta tags for consistency in capitalization. Adjusted styles and structure for improved layout and readability.

--- a/es/capitulos/por-que-no-soy-cristiano/index.html
+++ b/es/capitulos/por-que-no-soy-cristiano/index.html
@@ -3,178 +3,182 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Capítulo del libro: Por qué no soy “Cristiano” — testimonio y reflexión, edición editorial fiel." />
-  <title>Por qué no soy “Cristiano”</title>
+  <meta name="description" content="Capítulo del libro: Por qué no soy “cristiano” — testimonio y reflexión, edición pública fiel." />
+  <title>Por qué no soy “cristiano”</title>
+
   <style>
     :root { color-scheme: light dark; }
-    body { max-width: 860px; margin: 0 auto; padding: 28px 18px; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.65; }
-    header { margin-bottom: 18px; }
-    nav { display: flex; gap: 10px; flex-wrap: wrap; font-size: 0.95rem; opacity: 0.9; }
-    nav a { text-decoration: none; border-bottom: 1px solid transparent; }
+
+    body {
+      max-width: 860px;
+      margin: 0 auto;
+      padding: 28px 18px;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      line-height: 1.65;
+    }
+
+    nav {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      font-size: 0.95rem;
+      opacity: 0.92;
+      margin-bottom: 14px;
+    }
+
+    nav a {
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
+    }
+
     nav a:hover { border-bottom-color: currentColor; }
-    h1 { line-height: 1.2; margin: 12px 0 10px; }
+
+    h1 { line-height: 1.2; margin: 10px 0 8px; }
     h2 { margin-top: 26px; }
+
     hr { margin: 22px 0; opacity: 0.35; }
-    blockquote { margin: 14px 0; padding: 8px 14px; border-left: 3px solid currentColor; opacity: 0.95; }
-    .meta { font-size: 0.95rem; opacity: 0.85; }
-    .note { font-size: 0.92rem; opacity: 0.85; margin-top: 24px; }
+
+    .meta {
+      font-size: 0.95rem;
+      opacity: 0.85;
+      margin: 0;
+    }
+
+    blockquote {
+      margin: 14px 0;
+      padding: 10px 14px;
+      border-left: 3px solid currentColor;
+      opacity: 0.95;
+    }
+
+    footer {
+      margin-top: 28px;
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+
+    footer a {
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
+    }
+
+    footer a:hover { border-bottom-color: currentColor; }
   </style>
 </head>
+
 <body>
-  <header>
-    <nav>
-      <!-- Ajusta estos enlaces cuando tengas la versión en inglés -->
-      <strong>Español</strong>
-      <span>·</span>
-      <a href="../why-i-am-not-a-christian/">English</a>
-      <span>·</span>
-      <a href="../">Inicio</a>
-      <span>·</span>
-      <a href="../indice/">Índice</a>
-    </nav>
-    <h1>Por qué no soy “Cristiano”</h1>
-    <div class="meta">Capítulo del libro · Versión pública</div>
-  </header>
+  <nav>
+    <a href="../../../">Inicio</a>
+    <span>·</span>
+    <a href="../../">Español</a>
+    <span>·</span>
+    <a href="../../../en/chapters/why-i-am-not-a-christian/">English</a>
+  </nav>
 
-  <hr />
+  <main>
+    <h1>Por qué no soy “cristiano”</h1>
+    <p class="meta">Capítulo del libro · Edición pública</p>
 
-  <section aria-label="Posición del autor">
-    <h2>Posición del autor</h2>
+    <hr />
 
-    <p>Este texto expresa la <strong>opinión informada y responsable de una sola persona</strong>, basada en observación directa de la realidad, en el registro histórico, en el registro bíblico y en la experiencia acumulada de la humanidad a lo largo de los siglos.</p>
+    <h2>Postura del autor</h2>
 
-    <p>No se presenta como especulación ni como construcción ideológica, sino como <strong>convicción verificada y re-verificada</strong>, confirmada por sus frutos, por la coherencia interna de lo que afirma y por su consonancia con la verdad revelada en las Escrituras.</p>
+    <p>Este texto expresa la <strong>posición informada y responsable de un solo autor</strong>, sustentada en la observación directa de la realidad, en el registro histórico, en el registro bíblico y en la experiencia acumulada de la humanidad a lo largo de los siglos.</p>
 
-    <p>Quien escribe <strong>asume plena responsabilidad por lo que aquí se afirma</strong>, aun sin revelar su identidad, no por evasión, sino por <strong>prudencia</strong>, en un mundo donde decir la verdad puede implicar riesgos innecesarios.</p>
+    <p>No se presenta como especulación ni como un constructo ideológico, sino como una <strong>convicción verificada y re-verificada</strong>, confirmada por sus frutos, por su coherencia interna y por su consistencia con la verdad revelada en la Escritura.</p>
 
-    <p>La validez de lo aquí expuesto <strong>no depende de la identidad del autor</strong>, sino de su fidelidad a la verdad, a la realidad observable y al testimonio constante que atraviesa la historia humana.</p>
+    <p>El autor <strong>asume plena responsabilidad por lo que aquí se afirma</strong>, sin revelar su identidad personal—no como evasión, sino como <strong>prudencia</strong>, en un mundo donde decir la verdad puede implicar riesgos innecesarios.</p>
 
-    <p><strong>DIOS ES</strong>, y DIOS es testigo de todas las cosas, porque todo lo sabe y todo lo ve.</p>
-  </section>
+    <p>La validez de lo expresado <strong>no depende de la identidad del autor</strong>, sino de su fidelidad a la verdad, a la realidad observable y al testimonio que se sostiene consistentemente a través de la historia humana.</p>
 
-  <hr />
+    <p><strong>DIOS ES</strong>, y DIOS es testigo de todas las cosas, porque Él sabe todo y lo ve todo.</p>
 
-  <main aria-label="Capítulo">
+    <hr />
+
     <h2>Capítulo</h2>
 
-    <p>No soy cristiano.<br />
-    Y no lo digo como ataque, ni como provocación, ni como rechazo a Dios.<br />
-    Lo digo con calma, con coherencia y con plena conciencia de lo que digo.</p>
+    <p>
+      Yo no soy cristiano.<br />
+      No lo digo como ataque, ni como provocación, ni como rechazo de DIOS.<br />
+      Lo digo con calma, con coherencia y con plena conciencia de lo que estoy diciendo.
+    </p>
 
-    <p>Creo en DIOS. Creo que DIOS ES. Siempre ha sido y siempre será.<br />
-    Creo en Yeshua, el Cristo.<br />
-    Precisamente por eso, no me identifico con lo que hoy se conoce como <em>cristianismo</em>.</p>
+    <p>
+      Yo creo en DIOS. Creo que DIOS ES—siempre ha sido y siempre será.<br />
+      Creo en Yeshua, el Cristo.<br />
+      Precisamente por eso, no me identifico con lo que hoy se llama <em>cristianismo</em>.
+    </p>
 
-    <p>Imaginé una vez una escena: yo estaba siendo entrevistado por un grupo de personas. Me preguntaban por qué no era cristiano, si decía creer en Dios. Y mi respuesta fue simple, directa, casi incómoda por lo evidente:</p>
+    <p>Una vez imaginé una escena: un grupo de personas me entrevistaba. Me preguntaron por qué no era cristiano si decía creer en DIOS. Mi respuesta fue simple—casi incómoda por lo obvia:</p>
 
-    <p><strong>Porque dicen ser cristianos, pero ni siquiera guardan el Sabbath.</strong></p>
+    <p><strong>Porque dicen ser cristianos, pero ni siquiera guardan el Sábado.</strong></p>
 
-    <p>La reacción fue desproporcionada: risas nerviosas, brazos levantados, micrófonos en el aire, un coro de sorpresa y burla. No porque la respuesta fuera absurda, sino porque era demasiado simple. Estuvo frente a sus ojos todo el tiempo.</p>
+    <p>La reacción fue exagerada: risas nerviosas, brazos en alto, micrófonos en el aire—un coro de sorpresa y burla. No porque la respuesta fuera absurda, sino porque era demasiado simple. Había estado frente a ellos todo el tiempo.</p>
 
-    <p>Y entonces surge la pregunta inevitable:<br />
-    ¿Quién guardaba el Sabbath?</p>
+    <p>
+      Y entonces surge la pregunta inevitable:<br />
+      ¿Quién guardó el Sábado?
+    </p>
 
-    <p><strong>Yeshua.</strong><br />
-    El Cristo.<br />
-    Él lo guardaba.</p>
+    <p>
+      <strong>Yeshua.</strong><br />
+      El Cristo.<br />
+      Él lo guardó.
+    </p>
 
-    <p>Y no como rito vacío, ni como carga religiosa, ni como formalismo institucional. Lo guardaba como lo que realmente es: <strong>reposo</strong>.</p>
+    <p>No como ritual vacío, ni como carga religiosa, ni como formalismo institucional—sino como lo que verdaderamente es: <strong>descanso</strong>.</p>
 
-    <p>El mandamiento del Sabbath no trata simplemente de un día. Trata del reposo.<br />
-    Y entonces la conexión es inevitable:<br />
-    ¿Quién es el reposo?</p>
-
-    <p>Yeshua mismo lo dijo:</p>
-
-    <blockquote>
-      “Venid a mí todos los que estáis trabajados y cargados, y yo os haré descansar.”
-    </blockquote>
-
-    <p>¿Os haré qué?</p>
-
-    <p><strong>Descansar.</strong></p>
-
-    <p>Ahí todo encaja. El Sabbath apunta al reposo, y el reposo apunta a Cristo. Cristo no abolió el Sabbath; lo <strong>cumplió</strong>. El reposo verdadero no es una idea abstracta: es una persona.</p>
-
-    <p>El problema es que el reposo fue movido.<br />
-    No es el primer día de la semana. Nunca lo fue.<br />
-    Es el <strong>séptimo día</strong>.</p>
-
-    <p>El séptimo día es secuencial, creacional y memorial. Existía antes de Israel, antes de Roma, antes de cualquier “-ismo”. Fue guardado por el pueblo de Dios y preservado no por instituciones humanas, sino por el poder mismo de DIOS. Así como fue preservada Su Palabra. Así como fue preservada Su Misericordia. Y, más aún, DIOS envió a Su Hijo para que fuera —y siga siendo— descanso, perdón y vida para toda la humanidad.</p>
-
-    <p>El término <em>cristianismo</em> no nació del seguimiento vivo de Yeshua, sino de su institucionalización. Surgió en tiempos del imperio romano, un imperio que no adoptó la fe: la reorganizó para gobernar. El “-ismo” sustituyó al camino.</p>
-
-    <p>Escuché una vez una prédica donde se explicaba que el término <em>christian</em> surgió originalmente como un término <strong>despectivo</strong>, una etiqueta impuesta desde fuera: “los del Cristo”. Con el tiempo, la etiqueta se volvió bandera. Y la bandera reemplazó al camino.</p>
-
-    <p>Ahí aparece un patrón antiguo: lo mismo que ocurrió cuando el poder decidió mover el día por temor a perder control; lo mismo que ocurrió con sacrificios fuera del mandato; lo mismo que ocurrió en Babel.</p>
-
-    <p>Babel no fue un error arquitectónico. Fue una declaración teológica:<br />
-    <em>“Hagámonos un nombre.”</em></p>
-
-    <p>Unidad sin Dios.<br />
-    Progreso sin obediencia.<br />
-    Identidad sin Creador.</p>
-
-    <p>De Babel surge Babilonia, no solo como lugar, sino como <strong>espíritu</strong>: mezcla, sustitución, idolatría envuelta en lenguaje sagrado. Por eso Apocalipsis no habla de Babilonia como pasado, sino como patrón continuo. Paganismo refinado. Vida organizada en enemistad con las leyes de DIOS.</p>
-
-    <p>Y aun así, no hay que tener miedo. Hay que tener fe.<br />
-    Porque <strong>DIOS ES</strong>.</p>
-
-    <p>La fe, al final, es una decisión personal. No porque falten pruebas, sino porque sobran. El universo entero es evidencia. El sol, que no podemos mirar sin quedar ciegos. Las estrellas. El orden. La vida. La conciencia.</p>
-
-    <p>Si alguien puede ver todo eso y aun así decidir que DIOS no existe, no estamos ante falta de evidencia, sino ante una decisión. No es ceguera física: es ceguera mental.</p>
-
-    <p>Para mí, ya no es cuestión de “si hay pruebas”. El uni-verso es una firma. Una sola cosa, un todo ordenado. DIOS ES el Creador del universo y nuestro Creador.</p>
-
-    <p>Por eso decidí estructurar mi vida de otra manera. Decidí comenzar mis días dando, con agrado, lo que adeudo a DIOS: tiempo, atención y gratitud. Después de levantarme, asearme, vestirme y preparar mi té sin cafeína —cuidando el cuerpo que me fue dado—, pongo a DIOS en primer lugar. No con palabras, sino con acciones.</p>
-
-    <p>Porque no hay nada más significativo para el ser humano que agradar al Creador.</p>
-
-    <p>Yeshua lo dijo hace dos mil años:</p>
+    <p>
+      El mandamiento del Sábado no trata solamente de un día. Trata del descanso.<br />
+      Y la conexión se vuelve inevitable:<br />
+      ¿Quién es el descanso?
+    </p>
 
     <blockquote>
-      “Mirad las aves del cielo, que no siembran, ni siegan, ni recogen en graneros; y vuestro Padre celestial las alimenta. ¿No valéis vosotros mucho más que ellas?”
+      <q>Vengan a Mí todos los que están cansados y cargados, y Yo les daré descanso.</q>
     </blockquote>
 
-    <p>Eso no es una invitación a la irresponsabilidad. Es una invitación a dejar de vivir desde el miedo. El problema nunca fue la falta; fue la esclavitud interior. El amor al dinero no es raíz de todos los males porque el dinero sea malo, sino porque reemplaza la confianza.</p>
+    <p>Descanso.</p>
 
-    <p>Nunca he visto un árbol de manzanas que dé manzanas con etiquetas de precio o códigos de barras. La creación es abundante. La escasez es un sistema mental. DIOS creó el mundo en perfección.</p>
+    <p>El Sábado apunta al descanso, y el descanso apunta al Cristo. El Cristo no abolió el Sábado; lo <strong>cumplió</strong>. El descanso verdadero no es una idea abstracta—es una persona.</p>
 
-    <p>Mi propia vida es testimonio de ello. Mi último empleo fue hace más de una década. Y aquí estoy: vivo, en paz, habiendo realmente vivido estos años. No sobreviviendo. Viviendo. Pensando. Observando. Entendiendo.</p>
+    <p>
+      El problema es que movieron el descanso.<br />
+      No es el primer día de la semana. Nunca lo fue.<br />
+      Es el <strong>séptimo día</strong>.
+    </p>
 
-    <p>DIOS puede hacer todo en un instante, pero nosotros no vivimos en instantes. Vivimos un día a la vez. Y eso no es limitación: es misericordia. Sin proceso no hay aprendizaje. Sin jornada no hay edificación. Sin tiempo no hay crecimiento.</p>
+    <p>El séptimo día es secuencial, creacional y memorial. Existía antes de Israel, antes de Roma, antes de cualquier “-ismo”. No fue preservado por instituciones, sino por el poder de DIOS mismo—tal como Su Palabra fue preservada, tal como Su Misericordia fue preservada. Y por encima de todo, DIOS envió a Su Hijo para ser—todavía hoy—descanso, perdón y vida para toda la humanidad.</p>
 
-    <p>Si hubiéramos sido creados perfectos y con libre albedrío pleno desde el inicio, sin proceso, habríamos sido un desastre aún mayor. La libertad sin conciencia madura no produce virtud: produce caos. Por eso DIOS creó potencial, no perfección consumada.</p>
+    <p>
+      Y aun así, no hay razón para temer. Hay razón para tener fe.<br />
+      Porque <strong>DIOS ES</strong>.
+    </p>
 
-    <p>En la teoría de juegos existen tres formas básicas de interacción: colaboración, neutralidad y antagonismo. Los resultados son claros. La colaboración sostiene el sistema. El antagonismo puede ganar a corto plazo, pero destruye el juego. Cuando ambos antagonizan, todos pierden.</p>
+    <p>La fe, al final, es una decisión personal—no porque falte evidencia, sino porque es abundante. El universo mismo es evidencia: el sol que no podemos mirar sin quedar ciegos, las estrellas, el orden, la vida, la conciencia.</p>
 
-    <p>¿Y qué es el antagonismo en esencia?</p>
+    <p>Si alguien puede ver todo esto y aun así elegir negar a DIOS, el problema no es falta de pruebas, sino una decisión. No ceguera física—ceguera mental.</p>
 
-    <p><strong>Enemistad elegida.</strong></p>
+    <p>Para mí, el universo es una firma. Un todo unificado. DIOS ES el Creador del universo, y nuestro Creador.</p>
 
-    <p>Decidir ver al otro como enemigo.</p>
+    <p>Por eso elegí ordenar mi vida de otra manera—poniendo a DIOS primero no en palabras, sino en acciones. Porque no hay nada más significativo para un ser humano que vivir de una manera que agrade al Creador.</p>
 
-    <p>Eso es lo que ha ocurrido con la humanidad desde sus comienzos. No como genética, sino como <strong>semilla espiritual</strong>. En Caín no había ADN del mal, sino una postura interior: resentimiento, comparación y enemistad. Esa semilla se propagó por imitación, por elección repetida y por sistemas organizados en contra del diseño de DIOS. De Caín a Nimrod. De Nimrod a Babel. De Babel a Babilonia. Hasta nuestros días.</p>
-
-    <p>El antagonismo se devora a sí mismo. Una casa dividida contra sí misma no permanece. Por eso este mundo es una distopía barbárica y terrorífica: porque vive en enemistad consigo mismo.</p>
-
-    <p>Y aun así, gracias a DIOS, hay <strong>oasis de vida</strong> por doquier.<br />
-    Para quienes buscan agradar a DIOS en espíritu y en verdad.<br />
-    Para quienes eligen cooperación en lugar de enemistad.<br />
-    Reposo en lugar de esclavitud.<br />
-    Verdad en lugar de ruido.</p>
-
-    <p>Por eso no soy “cristiano”.</p>
-
-    <p>No porque rechace a Cristo, sino porque lo sigo.<br />
-    No porque niegue a DIOS, sino porque creo que <strong>DIOS ES</strong>.</p>
-
-    <p>Y porque no me llamo algo que no me practico.</p>
+    <p>
+      Por eso no soy “cristiano”.<br />
+      No porque rechace al Cristo, sino porque lo sigo.<br />
+      No porque niegue a DIOS, sino porque creo que <strong>DIOS ES</strong>.
+    </p>
   </main>
 
-  <footer class="note">
+  <footer>
     <hr />
-    <div>© Texto compartido públicamente como capítulo del libro. Se permite enlazar y citar con fidelidad al contenido.</div>
+    <div>
+      <a href="../../../">30,000 DAYS</a>
+      <span>·</span>
+      <a href="../../">Español</a>
+      <span>·</span>
+      <a href="../../../en/">English</a>
+    </div>
   </footer>
 </body>
 </html>
