Enhance SEO with updated title and meta tags
Updated the title and meta description for SEO improvements, and added Open Graph and Twitter meta tags.

--- a/es/capitulos/por-que-no-soy-cristiano/index.html
+++ b/es/capitulos/por-que-no-soy-cristiano/index.html
@@ -3,8 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Capítulo del libro: Por qué no soy “cristiano” — testimonio y reflexión, edición pública fiel." />
-  <title>Por qué no soy “cristiano”</title>
+
+  <title>30,000 DAYS — Por qué no soy “cristiano”</title>
+
+  <meta name="description" content="30,000 DAYS — Capítulo: Por qué no soy “cristiano”. Edición pública." />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="30,000 DAYS" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="30,000 DAYS — Por qué no soy “cristiano”" />
+  <meta property="og:description" content="Capítulo del libro 30,000 DAYS. Edición pública." />
+  <meta property="og:url" content="https://andy-thaler.github.io/30000-DAYS/es/capitulos/por-que-no-soy-cristiano/" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="30,000 DAYS — Por qué no soy “cristiano”" />
+  <meta name="twitter:description" content="Capítulo del libro 30,000 DAYS. Edición pública." />
 
   <style>
     :root { color-scheme: light dark; }
