--- a/index.html
+++ b/index.html
@@ -2,22 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>30,000 DAYS</title>
+
+  <meta name="description" content="30,000 DAYS — A public work. Chapters in English and Español." />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="30,000 DAYS" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="30,000 DAYS" />
+  <meta property="og:description" content="A public work. Chapters in English and Español." />
+  <meta property="og:url" content="https://andy-thaler.github.io/30000-DAYS/" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="30,000 DAYS" />
+  <meta name="twitter:description" content="A public work. Chapters in English and Español." />
+
   <style>
-    body{font-family:system-ui,Arial;display:grid;place-items:center;min-height:100vh;margin:0}
-    .box{max-width:720px;padding:32px;text-align:center}
-    a{display:inline-block;margin:10px;padding:14px 18px;border:1px solid #ccc;border-radius:10px;text-decoration:none;color:#111}
-    a:hover{background:#f3f3f3}
+    :root { color-scheme: light dark; }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    }
+
+    main {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    h1 {
+      font-size: clamp(3rem, 8vw, 5rem);
+      letter-spacing: 0.08em;
+      margin: 24px 0 28px;
+    }
+
+    .langs {
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      font-size: 1.1rem;
+    }
+
+    .langs a {
+      text-decoration: none;
+      padding: 10px 18px;
+      border: 1px solid currentColor;
+      border-radius: 999px;
+      opacity: 0.85;
+    }
+
+    .langs a:hover {
+      opacity: 1;
+    }
+
+    footer {
+      margin-top: 32px;
+      font-size: 0.9rem;
+      opacity: 0.6;
+    }
+
+    /* Cube */
+    .cube {
+      width: 160px;
+      height: 160px;
+      margin: 0 auto;
+    }
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
-<body>
-  <div class="box">
-    <h1>30,000 DAYS</h1>
-    <p>Select a language:</p>
 
-    <a href="./en/">English</a>
-    <a href="./es/">Español</a>
-  </div>
+<body>
+  <main>
+    <!-- UBBLOCK / Cube -->
+    <div class="cube" aria-hidden="true">
+      <svg viewBox="0 0 200 200" role="img">
+        <!-- Top -->
+        <polygon points="100,20 170,60 100,100 30,60"
+                 fill="none" stroke="currentColor" stroke-width="3"/>
+        <!-- Left -->
+        <polygon points="30,60 100,100 100,180 30,140"
+                 fill="none" stroke="currentColor" stroke-width="3"/>
+        <!-- Right -->
+        <polygon points="170,60 100,100 100,180 170,140"
+                 fill="none" stroke="currentColor" stroke-width="3"/>
+      </svg>
+    </div>
+
+    <h1>30,000 DAYS</h1>
+
+    <div class="langs">
+      <a href="./en/">English</a>
+      <a href="./es/">Español</a>
+    </div>
+
+    <footer>
+      A public work
+    </footer>
+  </main>
 </body>
 </html>
