--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
 
   <ul>
     <li><a href="./chapters/why-i-am-not-a-christian/">Why I Am Not a Christian</a></li>
-    <li><a href="./chapters/la-voz-que-me-precede-email-1.html">The Voice That Precedes Me — Memories (Email 1)</a></li>
+    <li><a href="./chapters/la-voz-que-me-precede-email-1/">The Voice That Precedes Me — Memories (Email 1)</a></li>
     <!-- add more chapters here -->
   </ul>
 </body>
