Translate chapter link to Spanish

--- a/es/index.html
+++ b/es/index.html
@@ -12,7 +12,7 @@
 
   <ul>
     <li><a href="./capitulos/por-que-no-soy-cristiano/">Por qué no soy cristiano</a></li>
-    <li><a href="./chapters/la-voz-que-me-precede-email-1/">The Voice That Precedes Me — Memories (Email 1)</a></li>
+    <li><a href="./chapters/la-voz-que-me-precede-email-1/">La Voz Que Me Precede — Memorias (Email 1)</a></li>
     <!-- agrega más capítulos aquí -->
   </ul>
 </body>
