--- a/es/capitulos/la-voz-que-me-precede-email-1/index.html
+++ b/es/capitulos/la-voz-que-me-precede-email-1/index.html
@@ -8,6 +8,13 @@
   <meta name="description" content="Relatos de mi madre acerca de mis orígenes. Email original publicado sin edición.">
 </head>
 <body>
+  <nav>
+    <a href="../../../">Inicio</a>
+    <span>·</span>
+    <a href="../../">Español</a>
+    <span>·</span>
+    <a href="../../../en/chapters/the-voice-that-precedes-me/">English</a>
+  </nav>
 
 <h1>La voz que me precede</h1>
 
