--- a/es/capitulos/la-voz-que-me-precede-email-1/index.html
+++ b/es/capitulos/la-voz-que-me-precede-email-1/index.html
@@ -25,9 +25,9 @@
 <p><strong>Correo electrónico original — publicado sin edición</strong></p>
 
 <div class="email-header">
-  <div><strong>Subject:</strong> Memorias</div>
   <div><strong>From:</strong> Hulda Salum</div>
   <div><strong>Date:</strong> Aug 25, 2021, 5:00 PM</div>
+  <div><strong>Subject:</strong> Memorias</div>
   <div><strong>To:</strong> me</div>
 </div>
 
@@ -88,6 +88,7 @@ Esta compañera de trabajo era una mujer madura, vivia con su esposo, y los fine
 <div class="email-header">
   <div><strong>From:</strong> Hulda Salum</div>
   <div><strong>Date:</strong> Aug 25, 2021, 5:00 PM</div>
+  <div><strong>Subject:</strong> Memories</div>
   <div><strong>To:</strong> me</div>
 </div>
 
