--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
   <style>
     :root { color-scheme: light dark; }
 
+<a class="corner-contact"
+   href="https://formspree.io/f/abcdwxyz"
+   target="_blank"
+   rel="noopener">
+  Contacto
+</a>
+    
     body {
       margin: 0;
       min-height: 100vh;
