--- a/es/index.html
+++ b/es/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li><a href="./capitulos/por-que-no-soy-cristiano/">Por qué no soy cristiano</a></li>
     <li><a href="./capitulos/la-voz-que-me-precede-email-1/">La Voz Que Me Precede — Memorias (Email 1)</a></li>
+    <li><a href="./capitulos/la-voz-que-me-precede-email-2/">La Voz Que Me Precede — Memorias (Email 2)</a></li>
     <!-- agrega más capítulos aquí -->
   </ul>
 </body>
