--- a/es/la-voz-que-me-precede-email-2/index.html
+++ b/es/la-voz-que-me-precede-email-2/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>30,000 DAYS — The Voice That Precedes Me · Email 2</title>
+  <title>30,000 DAYS — La voz que me precede · Email 2</title>
 
-  <meta name="description" content="The Voice That Precedes Me — Email 2. Chapter with original email by Hulda Salum." />
+  <meta name="description" content="La voz que me precede — Email 2. Capítulo con email original de Hulda Salum." />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="30,000 DAYS" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Voice That Precedes Me — Email 2 | 30,000 DAYS" />
-  <meta property="og:description" content="Chapter. Original email by Hulda Salum." />
-  <meta property="og:url" content="https://andy-thaler.github.io/30000-DAYS/en/chapters/the-voice-that-precedes-me-email-2/" />
+  <meta property="og:title" content="La voz que me precede — Email 2 | 30,000 DAYS" />
+  <meta property="og:description" content="Capítulo. Email original de Hulda Salum." />
+  <meta property="og:url" content="https://andy-thaler.github.io/30000-DAYS/es/capitulos/la-voz-que-me-precede-email-2/" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="The Voice That Precedes Me — Email 2 | 30,000 DAYS" />
-  <meta name="twitter:description" content="Chapter. Original email by Hulda Salum." />
+  <meta name="twitter:title" content="La voz que me precede — Email 2 | 30,000 DAYS" />
+  <meta name="twitter:description" content="Capítulo. Email original de Hulda Salum." />
 
   <!-- Global styles -->
   <link rel="stylesheet" href="/30000-DAYS/assets/style.css" />
@@ -26,89 +26,67 @@
 
 <body>
 
-  <h1>The Voice That Precedes Me</h1>
+  <h1>La voz que me precede</h1>
   <h2>Email 2</h2>
 
   <div class="email-header">
-    <div><strong>From:</strong> Hulda Salum</div>
-    <div><strong>To:</strong> A. Talero</div>
-    <div><strong>Date:</strong> August 26, 2021</div>
+    <div><strong>De:</strong> Hulda Salum</div>
+    <div><strong>Para:</strong> A. Talero</div>
+    <div><strong>Fecha:</strong> 26 de agosto de 2021</div>
   </div>
 
   <p>
-    From there we went to my husband’s mother’s house. There were five of them.
-    They all slept in the same room, and the other space served as the living
-    and dining room. There we made our own room. I had always lived with every
-    comfort, but at 21 years old the only thing that mattered to me was living
-    this new life.
+    De allí salimos a casa de la madre de mi esposo. Ellos eran cinco. Dormían todos en la misma habitación y la otra era sala y comedor. Allí hicimos nuestra habitación. Yo había vivido siempre con todas las comodidades, pero a los 21 años solo me importaba vivir esta nueva vida.
   </p>
 
   <p>
-    My mother-in-law constantly told my husband that one day I would leave him
-    and return to my comfortable life. She made many complaints, and we did not
-    stay there long.
+    La que era mi suegra vivía diciendo a mi esposo que algún día yo lo abandonaría y volvería a mi buena vida. Ella hacía muchos reclamos y duramos poco allí.
   </p>
 
   <p>
-    We went to live in the south of the city, with an aunt who had thirteen
-    children. There, in her daughters’ room, on a small cot, the two of us
-    settled in.
+    Fuimos a vivir al sur de la ciudad, donde una tía que tenía 13 hijos. Allí, en la habitación de sus hijas, en un pequeño catre, nos acomodábamos los dos.
   </p>
 
   <p>
-    I continued with my job, but he was sent to take the Lancero course in
-    Tolemaida (Melgar), and I was left alone at my aunt’s house, who very
-    generously hosted me.
+    Yo seguía con mi trabajo, pero a él lo enviaron a hacer curso de Lancero en Tolemaida (Melgar) y ya quedé sola donde mi tía, que muy generosamente me hospedaba.
   </p>
 
   <p>
-    After about two months of his training, he was sent to Barrancabermeja,
-    Santander. He was to form a counter-guerrilla group on an islet of the
-    Magdalena River called Casabe.
+    Pasaron unos dos meses de su entrenamiento y de allí salió para Barrancabermeja, Santander. Debía formar un grupo de contraguerrillas en un islote del río Magdalena que se llamaba Casabe.
   </p>
 
   <p>
-    Casabe had been the home of the Shell oil company, which exploited petroleum
-    in Colombia.
+    Casabe había sido el hogar de la petrolera Shell, que explotaba el petróleo en Colombia.
   </p>
 
   <p>
-    At that time, I was expecting my first child…<br />
-    What did I do?
+    En ese momento yo esperaba mi primer hijo…<br />
+    ¿Qué hice?
   </p>
 
   <p>
-    I resigned from my job, bought a ticket to Barranca, and set out to reunite
-    with my husband. I carried my guitar, my suitcase, dreams, illusions, and
-    everything else.<br />
-    With the recklessness of my 21 years.
+    Renuncié a mi empleo, compré un pasaje para Barranca y salí a reunirme con mi esposo. Llevaba mi guitarra, mi maleta, sueños, ilusiones y demás.<br />
+    Con la inconsciencia de mis 21 años.
   </p>
 
   <p>
-    My father, very lovingly, accompanied me to catch the plane.
+    Mi papá, muy lindo, me acompañó a coger el avión.
   </p>
 
   <p>
-    I arrived in Barranca at night. I identified myself to a police officer at
-    the airport. He called the Battalion, and they contacted Casabe. Late that
-    night, my husband came to pick me up in a boat.
+    Llegué a Barranca de noche. Me identifiqué ante un policía en el aeropuerto. Él llamó al Batallón y ellos se comunicaron con Casabe. Tarde en la noche, mi esposo pasó a recogerme en una lancha.
   </p>
 
   <p>
-    Casabe was very beautiful, but I should not have been there, since they were
-    preparing the first counter-guerrilla police contingent, and from there they
-    would go into the jungle.
+    Casabe era muy bonito, pero yo no debía estar allí, pues preparaban el primer contingente antiguerrilla de la policía y de allí saldrían al monte.
   </p>
 
   <p>
-    I must explain why I went. My father was a friend of the Director of the
-    Police, and I had an appointment with him to ask that my husband be kept in
-    Bogotá, because I would be left alone. He was emphatic in refusing. I told
-    him that if that was the case, I would go with my husband.<br />
-    And I did.
+    Debo hacer la salvedad de por qué me fui. Mi papá era amigo del director de la Policía y tuve una cita con él para pedirle dejar a mi esposo en Bogotá, pues yo me quedaría sola. Él fue enfático en no hacerlo, y yo le dije que si así era, yo me iría con mi esposo.<br />
+    Y yo lo cumplí.
   </p>
 
-  <p><em>Tomorrow, new episodes.</em></p>
+  <p><em>Mañana, nuevos episodios.</em></p>
 
 </body>
 </html>
