--- a/es/capitulos/la-voz-que-me-precede-email-2/index.html
+++ b/es/capitulos/la-voz-que-me-precede-email-2/index.html
@@ -31,7 +31,7 @@
 
   <div class="email-header">
     <div><strong>De:</strong> Hulda Salum</div>
-    <div><strong>Para:</strong> A. Talero</div>
+    <div><strong>Para:</strong> A. Thaler</div>
     <div><strong>Fecha:</strong> 26 de agosto de 2021</div>
   </div>
 
